--- a/index.html
+++ b/index.html
@@ -1,74 +1,38 @@
 <!DOCTYPE html>
 <head>
-    <title>I Don't Understand But I Luv U</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@400&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+<title> Love Expressed through Seventeen Songs</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <a href="/homepage/index.html" class="homebutton"> home </a>
+<section class="scrollsnap">
+    <h1 class="header">Love Expressed through<br>Seventeen Songs</h1>
+     <div>
+        <a href="/sara sara/index.html">
+            <h1 class="sarasara">Sara Sara</h1>
+       </a>
     </div>
     <div>
-        <h1 class="songname">Idubilu</h1>
+        <a href="/ready to love/index.html">
+            <h1 class="readytolove">Ready to Love</h1>
+        </a>
     </div>
-    <hr>
-    <div class="lyrics"> <h1>
-        When I saw you 멈춰버린 공간
-        예민해진 감각
-        <div class="quote">오직 너 하나 보일 때
-        내 마음은 내 눈마저 jealousy<sup>[1]</sup></div>
-        Oh, baby, 'cause I
-        You-ooh-ooh, whoa, whoa
-        깊은 숲속의 파도 (oh, yeah)
-        너는 내게 유일무이
-        기타의 선율 (oh, I)
-        간절히 원함을 다시 피어나게 해줄
-        짙은 향 속에 날 zoom (hoo)
-        어지러운 단어 사이 지워질까 더 겁나
-        You-ooh-ooh, whoa, whoa
-        <div class="quote">다른 언어와 다른 시간도
-        이해하지 않아도 다 알 수 있어<sup>[2]</sup></div>
-        둘만이 비밀로 공유한 password
-        우리 둘을 열어줘
-        세상에 존재하는 모든 말 yeah-eh-yeah
-        우리 둘만 아는 모습으로 충분해 내 모든 욕심으로
-        커져가는 감정의 파형으로 yeah-eh-yeah
-        알잖아 우리 사이엔 말보다 더 중요한 게 있잖아
-        I don't understand but I love, but I love you
-        I don't understand but I love, but I love you
-        I don't understand but I love, but I love you
-        I don't understand but I love, but I love you
-        두 눈을 감고서 바라봐 (바라봐)
-        느껴져 보란 듯이 너와 나 (oh)
-        시간의 구애는 받지 않아 any day
-        둘이 있는 anywhere
-        Ooh, whoa, love missile 파동 위로 원 (smoke, smoke)
-        피어올라라 S-two (S-two)
-        이해하지 않아도 알 수 있어 너 (yeah)
-        언어의 장벽은 그저 거품
-        알잖아 넌 나도 날 don't believe me
-        But 넌 날 믿어 줬지
-        난 너의 안에서 오직
-        피어오른 꽃 지펴라 불꽃
-        다른 언어와 다른 시간도
-        이해하지 않아도 다 알 수 있어
-        둘만이 비밀로 공유한 password
-        우리 둘을 열어줘
-        세상에 존재하는 모든 말 yeah-eh-yeah
-        우리 둘만 아는 모습으로 충분해 내 모든 욕심으로
-        커져가는 감정의 파형으로 yeah-eh-yeah
-        알잖아 우리 사이엔 말보다 더 중요한 게 있잖아
-        I don't understand but I love, but I love you
-        I don't understand but I love, but I love you
-        I don't understand but I love, but I love you
-        I don't understand but I love, but I love you
-    </h1>
+    <div>
+        <a href="/very nice/index.html">
+            <h1 class="verynice">Very Nice</h1>
+        </a>
     </div>
-    <div class="citations">
-        [1] "When I see just you, my heart and my eyes are jealous." How romantic? To be so wholly in love with someone that your very own eyes wish it could be you, who can experience love the way you do. <br> <br> <br>
-        [2] "Despite different languages and different times even if we can’t understand, we can understand it all" This song has a special place in my heart. The lyrics are a heartful ode to Seventeen's international listeners who may not necessarily understand every song word for word, but love them and their songs just as much. I think it's a beautiful reminder that love can bloom beyond language and cultural barriers. <br> <br> <br>
+    <div>
+        <a href="/darl+ing/index.html">
+            <h1 class="darling">Darl+ing</h1>
+        </a>
     </div>
+    <div>
+        <a href="/idubilu/index.html">
+            <h1 class="idubilu">I Don't Understand<br>But I Luv U</h1>
+        </a>
+    </div>
+</section>
 </body>
