--- a/darl+ing/index.html
+++ b/darl+ing/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <a href="/homepage/index.html" class="homebutton"> home </a>
+        <a href="/seventeenlove/index.html" class="homebutton"> home </a>
     </div>
     <div>
         <h1 class="songname">Darl+ing</h1>
