--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <section class="scrollsnap">
     <h1 class="header">Love Expressed through<br>Seventeen Songs</h1>
      <div>
-        <a href="/seventeenlove/sara sara/index.html">
+        <a href="/sara sara/index.html">
             <h1 class="sarasara">Sara Sara</h1>
        </a>
     </div>
