--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 <section class="scrollsnap">
     <h1 class="header">Love Expressed through<br>Seventeen Songs</h1>
      <div>
-        <a href="/sara sara/index.html">
+        <a href="/sara sara/song1.html">
             <h1 class="sarasara">Sara Sara</h1>
        </a>
     </div>
     <div>
-        <a href="/ready to love/index.html">
+        <a href="/ready to love/song2.html">
             <h1 class="readytolove">Ready to Love</h1>
         </a>
     </div>
     <div>
-        <a href="/very nice/index.html">
+        <a href="/very nice/song3.html">
             <h1 class="verynice">Very Nice</h1>
         </a>
     </div>
     <div>
-        <a href="/darl+ing/index.html">
+        <a href="/darl+ing/song4.html">
             <h1 class="darling">Darl+ing</h1>
         </a>
     </div>
     <div>
-        <a href="/idubilu/index.html">
+        <a href="/idubilu/song5.html">
             <h1 class="idubilu">I Don't Understand<br>But I Luv U</h1>
         </a>
     </div>
