--- a/very nice/song3.html
+++ b/very nice/song3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <a href="/homepage/index.html" class="homebutton"> home </a>
+        <a href="/index.html" class="homebutton"> home </a>
     </div>
     <div>
         <h1 class="songname">Very Nice</h1>
