--- a/idubilu/song5.html
+++ b/idubilu/song5.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>I Don't Understand But I Luv U</title>
     <link rel="stylesheet" href="/style.css">
@@ -72,3 +73,4 @@
         [2] "Despite different languages and different times even if we can’t understand, we can understand it all" This song has a special place in my heart. The lyrics are a heartful ode to Seventeen's international listeners who may not necessarily understand every song word for word, but love them and their songs just as much. I think it's a beautiful reminder that love can bloom beyond language and cultural barriers. <br> <br> <br>
     </div>
 </body>
+</html>
