--- a/darl+ing/song4.html
+++ b/darl+ing/song4.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Darl+ing</title>
     <link rel="stylesheet" href="/style.css">
@@ -88,3 +89,4 @@
 
     </div>
 </body>
+</html>
