--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <title> Love Expressed through Seventeen Songs</title>
 <link rel="stylesheet" type="text/css" href="homepage/homepage.css">
@@ -36,3 +37,4 @@
     </div>
 </section>
 </body>
+</html>
