--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section class="scrollsnap">
     <h1 class="header">Love Expressed through<br>Seventeen Songs</h1>
      <div>
-        <a href="/sarasara/song1.html">
+        <a href="sarasara/song1.html">
             <h1 class="sarasara">Sara Sara</h1>
        </a>
     </div>
