--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
        </a>
     </div>
     <div>
-        <a href="/readytolove/song2.html">
+        <a href="readytolove/song2.html">
             <h1 class="readytolove">Ready to Love</h1>
         </a>
     </div>
     <div>
-        <a href="/verynice/song3.html">
+        <a href="verynice/song3.html">
             <h1 class="verynice">Very Nice</h1>
         </a>
     </div>
     <div>
-        <a href="/darl+ing/song4.html">
+        <a href="darl+ing/song4.html">
             <h1 class="darling">Darl+ing</h1>
         </a>
     </div>
     <div>
-        <a href="/idubilu/song5.html">
+        <a href="idubilu/song5.html">
             <h1 class="idubilu">I Don't Understand<br>But I Luv U</h1>
         </a>
     </div>
