--- a/readytolove/song2.html
+++ b/readytolove/song2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Ready to Love</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <a href="/index.html" class="homebutton"> home </a>
+        <a href="index.html" class="homebutton"> home </a>
     </div>
     <div>
         <h1 class="songname">Ready to Love</h1>
