--- a/idubilu/song5.html
+++ b/idubilu/song5.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>I Don't Understand But I Luv U</title>
-    <link rel="stylesheet" href="/idubilu/style.css">
+    <link rel="stylesheet" href="song5.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
