--- a/darl+ing/song4.html
+++ b/darl+ing/song4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Darl+ing</title>
-    <link rel="stylesheet" href="/darl+ing/style.css">
+    <link rel="stylesheet" href="song4.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
