--- a/readytolove/song2.html
+++ b/readytolove/song2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Ready to Love</title>
-    <link rel="stylesheet" href="readytolove.css">
+    <link rel="stylesheet" href="song2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
