--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <section class="scrollsnap">
-    <h1 class="header">Love Expressed through<br>Seventeen Songs</h1>
+    <div>
+        <h1 class="header">Love Expressed through<br>Seventeen Songs</h1>
+    </div>
      <div>
         <a href="sarasara/song1.html">
             <h1 class="sarasara">Sara Sara</h1>
