--- a/idubilu/song5.html
+++ b/idubilu/song5.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <a href="index.html" class="homebutton"> home </a>
+        <a href="/index.html" class="homebutton"> home </a>
     </div>
     <div>
         <h1 class="songname">Idubilu</h1>
