--- a/sarasara/song1.html
+++ b/sarasara/song1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <a href="/love-expressed-through-seventeen-songs/index.html" class="homebutton"> home </a>
+        <a href="/index.html" class="homebutton"> home </a>
     </div>
     <div>
         <h1 class="songname">Sara Sara</h1>
